# wechat-vendor-sdk-rs

./: .gitignore  Cargo.toml  DEV.md  README.md
.cargo/: config.toml
examples/: demo.rs  demo_wxcorp.rs  wxcorp.rs  wxmini.rs  wxpay.rs
src/: common.rs  lib.rs
src/wxcorp/: api.rs  base.rs  client.rs  mod.rs
src/wxmini/: api.rs  base.rs  client.rs  mod.rs
src/wxpay/: api.rs  callback.rs  error.rs  mod.rs  utils.rs
