[package]
name = "wechat-vendor-sdk"
version = "0.1.2"
edition = "2021"
keywords = ["wechat"]
license = "MIT"
description = "wechat miniprogram and wechat corp sdk (微信小程序和企业微信部分 sdk 封装)"
repository = "https://github.com/XHMM/wechat-vendor-sdk-rs"
documentation = "https://docs.rs/wechat-vendor-sdk/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
reqwest = { version = "0.12.3", features = ["json"] }

[features]
default = []
all = ["wxcorp", "wxmini"]
wxcorp = []
wxmini = []

[dev-dependencies]
wechat-vendor-sdk = { path = ".", features = ["all"] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
