[package]
name = "wechat-vendor-sdk"
version = "0.3.25"
edition = "2021"
keywords = ["wechat"]
license = "MIT"
description = "wechat miniprogram and wechat corp sdk (微信小程序、公众号和企业微信部分 sdk 封装)"
repository = "https://github.com/XHMM/wechat-vendor-sdk-rs"
documentation = "https://docs.rs/wechat-vendor-sdk/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
reqwest = { version = "0.12.3", features = ["json"] }
rand = { version = "0.8.5", optional = true }
rsa = { version = "0.9.6", optional = true, features = ["sha2"] }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.22", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
bon = "3.6.3"

[features]
default = []
all = ["wxcorp", "wxmini", "wxpay"]
wxcorp = []
wxmini = []
wxpay = ["dep:rand", "dep:rsa", "dep:base64", "dep:chrono", "dep:aes-gcm"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "wxmini"
path = "examples/wxmini.rs"
required-features = ["wxmini"]

[[example]]
name = "wxcorp"
path = "examples/wxcorp.rs"
required-features = ["wxcorp"]

[[example]]
name = "wxpay"
path = "examples/wxpay.rs"
required-features = ["wxpay"]


[dev-dependencies]
tracing-subscriber = { version = "0.3.18" }
wechat-vendor-sdk = { path = ".", features = ["all"] }
tokio = { version = "1.35.1", features = ["full"] }
